Using Math.clamp (new in Java 21)
https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Math.html#clamp(double,double,double)

Co-authored-by: Benedikt Fein <fein@fim.uni-passau.de>